--- a/papier-kamien-nozyce/index.html
+++ b/papier-kamien-nozyce/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rock, Paper, Scissors Game</title>
 
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <input type="image" src="img/rock.jpg" width="200" height="200"></input>
+    <input type="image" src="img/paper.jpg" width="200" height="200"></input>
+    <input type="image" src="img/scissors.jpg" width="200" height="200"></input>
+        
+    <p id="wynik">Result...</p>
+
+    <img src="" alt="" id="result">
+    </p>
+</body>
+</html>
