--- a/papier-kamien-nozyce/index.html
+++ b/papier-kamien-nozyce/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,16 +7,16 @@
     <title>Rock, Paper, Scissors Game</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="script.js"></script>
 </head>
 <body>
-    <input type="image" src="img/rock.jpg" width="200" height="200" onclick="game(0)"></input>
-    <input type="image" src="img/paper.jpg" width="200" height="200" onclick="game(1)"></input>
-    <input type="image" src="img/scissors.jpg" width="200" height="200" onclick="game(2)"></input>
-        
-    <p id="wynik">Result...</p>
+    <div id="buttons">
+        <input type="image" src="img/rock.jpg" onclick="game(0)"></input>
+        <input type="image" src="img/paper.jpg" onclick="game(1)"></input>
+        <input type="image" src="img/scissors.jpg" onclick="game(2)"></input>
+    </div>
+    <center><p id="wynik">Result...</p></center>
 
-    <img src="" alt="Chosen" id="result">
+    <img src="" id="result">
     </p>
 </body>
 </html>
