--- a/papier-kamien-nozyce/index.html
+++ b/papier-kamien-nozyce/index.html
@@ -16,7 +16,7 @@
         <input type="image" src="img/paper.jpg" width="200" height="200" onclick="game(1)"></input>
         <input type="image" src="img/scissors.jpg" width="200" height="200" onclick="game(2)"></input>
     </div>    
-    <p id="wynik" class="centerr">Result..</p>
+    <p id="wynik" class="centerr">Result...</p>
 
     <img src="" alt="" id="result" class="centerr" style="width: 400px;">
     </p>
