--- a/dzik/index.html
+++ b/dzik/index.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gra w Dzika</title>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <script src="script.js"></script>
+</head>
+<body>
+    <div>
+        <h1>Gra w Dzika</h1>
+        <h2>Wylosowana liczba:</h2>
+        <p id="liczba"></p>
+    </div>
+    <div id="obrazki">
+        <img src="img/nie.jpg" alt="Nie">
+        <img src="img/dzik.jpg" alt="Dzik">
+    </div> 
+    <div>
+        <h2>Liczba punktów:</h2>
+        <p id="wynik"></p>
+    </div> 
+</body>
+</html>
