--- a/Dinozaury/index.html
+++ b/Dinozaury/index.html
@@ -10,7 +10,7 @@
     <div id="menu">
         <h1>Dinozaury</h1>
         
-        <p style="text-align: left; margin-bottom: 40px;">Gracz musi uciekać dinozaurem przed T-rexami, których ilość będzie zwiększać się co trzy sekundy. Za każdego dodanego T-rexa, dostaje się jeden punkt. Jeśli gracz dotknie T-rexa, przegrywa.</p>
+        <p style="text-align: left; margin-bottom: 40px;">Gracz musi uciekać dinozaurem przed T-rexami, których ilość będzie zwiększać się co trzy sekundy. Gracz porusza się strzałkami. Za każdego dodanego T-rexa, dostaje się jeden punkt. Jeśli gracz dotknie T-rexa, przegrywa.</p>
         
         <label for="speed">Wybierz szybkość przeciwników (1-10):</label><br>
         <input type="number" id="speed" min="1" max="12" value="10">
