--- a/7_najwiekszych_miast/tokio.html
+++ b/7_najwiekszych_miast/tokio.html
@@ -55,10 +55,11 @@
         </audio>
 
         <h3><a id="miejsca">10 najciekawszych miejsc w Tokio</a></h3>
-        <video id="video" controls>
-          <source src="media/film_tokio.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
+		<iframe
+			src="media/film_tokio.mp4"
+			frameborder="0"
+			allowfullscreen="">
+		</iframe>
 
         <ol class="i">
           <li>Takeshita street in Harajuku (shopping), Tokyu Plaza, Ginza</li>
