--- a/7_najwiekszych_miast/tokio.html
+++ b/7_najwiekszych_miast/tokio.html
@@ -56,14 +56,14 @@
 
         <h3><a id="miejsca">10 najciekawszych miejsc w Tokio</a></h3>
         <video id="video" controls>
-          <source src="media/film_tokio.mp4?v=1" type="video/mp4">
+          <source src="media/film_tokio.webm" type="video/webm">
           Your browser does not support the video tag.
         </video>
 
         <ol class="i">
           <li>Takeshita street in Harajuku (shopping), Tokyu Plaza, Ginza</li>
           <li>Sensō-ji Buddhist temples, Nakamise-dori</li>
-          <li>Japanese food & drinks Omoide Yokocho & Golden Gai in Shinjuku | Tokyo street food & desserts (sushi, ramen, takoyaki, yakisoba, dango, wagashi/mochi, dorayaki, taiyaki, etc.)</li>
+          <li>Japanese food &amp; drinks Omoide Yokocho &amp; Golden Gai in Shinjuku | Tokyo street food &amp; desserts (sushi, ramen, takoyaki, yakisoba, dango, wagashi/mochi, dorayaki, taiyaki, etc.)</li>
           <li>Tokyo Imperial Palace | Edo Castle aka Chiyoda Castle</li>
           <li>Vending machines</li>
           <li>Mirai-kan Museum | The National Museum of Emerging Science and Innovation</li>
